@@ -4,6 +4,7 @@
   ------------------------------------------------------------------------------
     - options.lua file was moved to conf subfolder to
       fix configuration tracking (bugs #222 and #225)
+    - a lot of minor bugs were fixed
     - Estonian translation was updated
 
 
